--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-Alimentação Saudável e Qualidade de Vida 
-### A alimentação saudável é uma das melhores maneiras de garantir qualidade de vida, porque faz nosso corpo funcionar de forma adequada e também ajuda na prevenção de doenças. Ela deve ser balanceada, rica em proteínas, gorduras, carboidratos, fibras, vitaminas, água e sais minerais.
-### Em cada fase da vida, o corpo humano possui necessidades nutricionais distintas. As boas práticas que envolvem uma boa alimentação, inclusive, começam desde cedo, ao nascimento, com o aleitamento materno exclusivo até os seis meses de vida, e devem ser mantidos no decorrer da vida.
+<h1> Alimentação Saudável e Qualidade de Vida </h1>
+A alimentação saudável é uma das melhores maneiras de garantir qualidade de vida, porque faz nosso corpo
+ funcionar de forma adequada e também ajuda na prevenção de doenças. Ela deve ser balanceada, rica em 
+ proteínas, gorduras, carboidratos, fibras, vitaminas, água e sais minerais. Em cada fase da vida, o 
+ corpo humano possui necessidades nutricionais distintas. As boas práticas que envolvem uma boa 
+ alimentação, inclusive, começam desde cedo, ao nascimento, com o aleitamento materno exclusivo até os 
+ seis meses de vida, e devem ser mantidos no decorrer da vida.
